Fix cart overflow

--- a/src/components/layout/styles/header.scss
+++ b/src/components/layout/styles/header.scss
@@ -328,7 +328,7 @@ header {
           padding: 0 0 20px;
           min-width: 290px;
           max-height: 250px;
-          overflow: scroll;
+          overflow-y: scroll;
 
           ul {
             .single-item {
